--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "wadeshuler/yii2-sliderrevolution": "@dev",
         "2amigos/yii2-google-maps-library": "*",
         "kartik-v/yii2-widget-fileinput": "@dev",
-        "dixonsatit/yii2-thai-year-formatter": "*"
+        "dixonsatit/yii2-thai-year-formatter": "*",
+        "perminder-klair/yii2-dropzone": "dev-master"
     },
     "require-dev": {
         "yiisoft/yii2-codeception": "*",
